--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/didemcbay/shopping-app#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
-    "flatted": "^2.0.1"
+    "express": "^4.17.1",
+    "flatted": "^2.0.1",
+    "pug": "^3.0.2"
   }
 }
